2002-09-16  Roland McGrath  <roland@redhat.com>

	* include/unistd.h: Uncomment libc_hidden_proto for _exit.
	* sysdeps/mach/hurd/_exit.c: Add libc_hidden_def.
	* sysdeps/generic/_exit.c: Likewise.

2002-09-12  Jakub Jelinek  <jakub@redhat.com>

	* elf/rtld.c (struct dl_start_final_info): New.
	(_dl_start_final): Change second argument to struct
	dl_start_final_info *.  Set start_time from info.
	(_dl_start): Remove bootstrap_map variable, add info.
	Define bootstrap_map as macro.  If not DONT_USE_BOOTSTRAP_MAP,
	store HP_TIMING_NOW result into info.start_time.

2002-09-16  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/_exit.c: Add libc_hidden_def and weak_alias
	to _Exit.
	* sysdeps/unix/sysv/linux/i386/_exit.S: Likewise.

2002-09-15  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/powerpc/abort-instr.h: New file.

2002-09-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-start.c (__libc_start_main): Remove bogus
	comment.

	* test-skeleton.c (main): Provide more information in case waitpid
	fails.

	* include/unistd.h: Declare __exit_thread.
	* sysdeps/generic/libc-start.c (__libc_start_main): Remove dummy_addr.
	Wrap call to main in setjmp if HAVE_CANCELBUF is defined.
	* sysdeps/unix/sysv/linux/exit-thread.S: New file.
	* sysdeps/unix/sysv/linux/_exit.c: New file.
	* sysdeps/unix/sysv/linux/i386/_exit.S: New file.
	* sysdeps/unix/sysv/linux/Makefile [subdir==posix] (sysdep_routines):
	Add exit-thread.

	* configure.in: Add dl_iterate_phdr to test using -nostdlib.

2002-09-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/dl-machine.h (elf_machine_rel)
	(case R_386_TLS_DTPMOD32): Don't use addend.
	[case R_386_TLS_TPOFF32]: Remove redundant SYM_MAP != NULL check.
	(elf_machine_rela): Add support for TLS relocs.

2002-09-14  Roland McGrath  <roland@redhat.com>

	* Makefile (manual/%): Add this pattern target to the iconvdata/% rule.

2002-07-29  Steven Munroe  <sjmunroe@us.ibm.com>
